# ttai

./: .dev.vars.example  .env.local.example  .gitignore  CLAUDE.md  LICENSE  README.md  Tiltfile  pyrightconfig.json
.github/workflows/: build.yml
cert-api/: .gitignore  README.md  SETUP.md  package-lock.json  package.json  wrangler.toml
cert-api/src/: acme.ts  dns.ts  index.ts
docs/: CODE_SIGNING_SETUP.md
docs/architecture/: 01-mcp-server-design.md  02-temporal-orchestration.md  02-workflow-orchestration.md  03-python-activities.md  03-python-server.md  03-python-workers.md  04-ai-agent-system.md  05-data-layer.md  06-background-tasks.md  07-knowledge-base.md  08-build-distribution.md  08-infrastructure.md  09-integration-patterns.md  11-frontend.md  (+1 more)
helm/: postgresql-dev.yaml  redis-dev.yaml  temporal-dev.yaml
mcp-server/: Dockerfile  Dockerfile.dev  package.json
migrations/: 0001_initial_schema.sql
src-frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
src-go/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  ttai.desktop  wix.json
src-python/: .gitignore  README.md  dev.py  pyproject.toml
src-python/scripts/: build.py
src-python/src/: __init__.py  __main__.py
src-python/src/auth/: __init__.py  credentials.py
src-python/src/gui/: __init__.py  app.py  main_window.py  preferences.py  state.py  system_tray.py
src-python/src/gui/widgets/: __init__.py  about_page.py  connection_page.py  login_dialog.py  settings_page.py
src-python/src/server/: __init__.py  config.py  main.py  ssl.py  tools.py
src-python/src/services/: __init__.py  cache.py  database.py  tastytrade.py
src-python/src/utils/: __init__.py  logging.py
src-python/tests/: __init__.py  test_services.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
src-web/: .gitignore  README.md  package-lock.json  package.json
workers/: Dockerfile  Dockerfile.dev  Dockerfile.streaming.dev  config.py  pyproject.toml  streaming_worker.py  worker.py
workers/activities/: __init__.py  data_fetching.py
workers/mcp-server/: package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/mcp-server/src/: index.ts
workers/mcp-server/src/auth/: encryption.ts  index.ts  jwt.ts  middleware.ts  oauth.ts  setup.ts
workers/python-worker/: wrangler.toml
workers/python-worker/src/: main.py
workers/python-worker/src/tastytrade/: __init__.py  auth.py  client.py
workers/scripts/: test_data_layer.py
workers/services/: __init__.py  cache.py  database.py  tastytrade.py
workers/tests/: __init__.py  test_quote_workflow.py
workers/workflows/: __init__.py  quote.py
(+57 files in other folders)
