[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttai-server"
version = "0.1.0"
description = "TastyTrade AI MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "tastytrade>=8.0",
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "watchdog>=3.0.0",
]

[project.scripts]
ttai-server = "src.server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
