[package]
name = "ttai"
version = "0.1.0"
edition = "2021"
description = "TastyTrade AI - AI-assisted trading analysis"
authors = ["Tyler Johnson"]
license = "MIT"

[lib]
name = "ttai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ttai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
